[Code Cleanup] jQuery UI/UX fixes for dialog overflow.

--- a/features/cerberusweb.core/resources/css/cerb.css
+++ b/features/cerberusweb.core/resources/css/cerb.css
@@ -1886,10 +1886,6 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
   padding: 5px 5px 5px 10px;
 }
 
-.ui-dialog .ui-dialog-content {
-  overflow: inherit;
-}
-
 .ui-dialog fieldset select {
   max-width: 450px;
 }
