--- a/install/extras/developers/css/cerb.css/_jquery-ui.scss
+++ b/install/extras/developers/css/cerb.css/_jquery-ui.scss
@@ -142,9 +142,9 @@ UL.ui-autocomplete.ui-menu li.ui-menu-item.ui-state-focus {
 	padding:5px 5px 5px 10px;
 }
 
-.ui-dialog .ui-dialog-content {
-	overflow: inherit;
-}
+//.ui-dialog .ui-dialog-content {
+//	overflow: inherit;
+//}
 
 .ui-dialog fieldset select {
 	max-width: 450px;
